force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>SAP发票</label>
    <nameField>
        <displayFormat>I{0000000000}</displayFormat>
        <label>Invoice No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>