force-app/main/default/objects/Invoice__c/fields/Invoice_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Posting_Date__c</fullName>
    <label>Invoice Posting Date</label>
    <type>Date</type>
</CustomField>