force-app/main/default/objects/Invoice__c/fields/Invoice_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total_Amount__c</fullName>
    <label>Total Invoice Amount(EX VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>