force-app/main/default/objects/Invoice__c/fields/InvoiceTotalAmountAfterRebate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalAmountAfterRebate__c</fullName>
    <label>Total Net Amount(After Rebate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>