force-app/main/default/objects/Invoice__c/fields/SAP_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Code__c</fullName>
    <label>Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>