force-app/main/default/objects/Invoice__c/fields/SAP_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Invoice_No__c</fullName>
    <externalId>true</externalId>
    <label>SAP Invoice No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>