force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SAP_Invoice_No__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Invoice_Total_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>